test/docs-doctest/fixtures/concurrency-row-laundering.stderr
fixtures/concurrency-row-laundering.jac:12:1-69: error[E0804]: The value does not satisfy its annotation
  Cause: equation definition `launder` does not match its signature: expected () ->{async} task text, got () ->{async, net | e} task text (a closed effect row cannot absorb extra effects; a stored definition passed as a thunk can be eta-expanded at the use site: (lam () (app (var f))))
  Next step: Change the value or its annotation so the two types agree.
