test/docs-doctest/fixtures/concurrency-row-laundering.jac
type Task a = | TaskOpaque
type TaskResult a = | Done(value: a) | Failed(message: Text) | Cancelled

once effect Async a where {
  async.spawn : (() ->{Async | e} a) -> Task a
  async.await : (Task a) -> TaskResult a
  async.cancel : (Task a) -> ()
  async.yield : () -> ()
}

launder : () ->{Async} Task Text
launder() = async.spawn(fn () -> net.get("https://example.invalid"))
